[package]
name = "isrc"
version = "0.1.0"
authors = ["Iha Shin <me@xiniha.dev>", "Jihyeon Kim <simnalamburt@gmail.com>"]
edition = "2024"
description = "ISRC (International Standard Recording Code) parser library."
repository = "https://github.com/contentstech-com/isrc-rs"
license = "Apache-2.0 OR MIT"
keywords = ["isrc", "parser"]
categories = ["parsing"]

[dependencies]
bitcode = "0.6"
heapless = { version = "0.8.0", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
assert_matches = "1.5.0"
bincode = "1.3.3"
serde_json = "1.0.140"
toml = "0.8.20"
